--- a/src/output.css
+++ b/src/output.css
@@ -310,6 +310,9 @@
   .self-center {
     align-self: center;
   }
+  .overflow-hidden {
+    overflow: hidden;
+  }
   .scroll-smooth {
     scroll-behavior: smooth;
   }
@@ -530,29 +533,19 @@
       display: flex;
     }
   }
-  .xl\:grid {
-    @media (width >= 80rem) {
-      display: grid;
-    }
-  }
   .xl\:hidden {
     @media (width >= 80rem) {
       display: none;
     }
   }
-  .xl\:grid-cols-3 {
-    @media (width >= 80rem) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
-  .xl\:grid-rows-3 {
-    @media (width >= 80rem) {
-      grid-template-rows: repeat(3, minmax(0, 1fr));
-    }
-  }
   .xl\:flex-row {
     @media (width >= 80rem) {
       flex-direction: row;
+    }
+  }
+  .xl\:flex-wrap {
+    @media (width >= 80rem) {
+      flex-wrap: wrap;
     }
   }
   .xl\:items-center {
@@ -605,8 +598,8 @@
 }
 @media (min-width:1200px) {
   .gallery__img {
-    height: initial;
-    object-fit: contain;
+    min-height: 425px;
+    flex: 1 1 32%;
   }
 }
 @property --tw-border-style {
